--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "vite": "^7.0.4"
-  }
+  },
+  "homepage": "https://omaribrahim16.github.io/react_routing/"
 }
