--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "assignment1",
-  "private": false,
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -27,6 +27,5 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "vite": "^7.0.4"
-  },
-  "homepage": "https://omaribrahim16.github.io/react_routing/"
+  }
 }
