--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
     "rewriters": [
         {
-            "source": "/(.*)"
+            "source": "/(.*)",
+            "destination": "/"
         }
     ]
 }
